<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/creditCardInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_card_number"
                android:inputType="number"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/expirationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expiration_date_mm_yy"
                android:inputType="text"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/cvvInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                android:inputType="numberPassword"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_purchase"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>